Completed short-url JSON setup

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,4 +9,5 @@
 
 <a href="/timestamp">Timestamp API</a>
 <a href="/request-parse">Request Header API</a>
+<a href="/short-url">URL Shortener API</a>
 {% endblock %}
