File metadata microservice complete

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 
 <p>A description of the task needed can be found on <a href='https://www.freecodecamp.org'>freeCodeCamp</a>.</p>
 
-<a href="/timestamp">Timestamp API</a>
-<a href="/request-parse">Request Header API</a>
-<a href="/short-url">URL Shortener API</a>
+<a href="/timestamp">Timestamp API</a><br/>
+<a href="/request-parse">Request Header API</a><br/>
+<a href="/short-url">URL Shortener API</a><br/>
+<a href="/file-metadata">File Size API</a><br/>
 {% endblock %}
