Finished image search api and added forms to index pages for endpoints

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
 <a href="/timestamp">Timestamp API</a><br/>
 <a href="/request-parse">Request Header API</a><br/>
 <a href="/short-url">URL Shortener API</a><br/>
+<a href="/image-search">Image Search API</a><br/>
 <a href="/file-metadata">File Size API</a><br/>
 {% endblock %}
