--- a/templates/image-search.html
+++ b/templates/image-search.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Timestamp API{% endblock %}
+{% block title %}Image Search API{% endblock %}
 
 {% block content %}
 <form>
@@ -8,13 +8,16 @@
   <input name="query-input" action="" id="query-input"></input></br>
   <button id="query">Go</button>
 </form>
+</br>
+Recent Queries:</br>
+<a href="/image-search/recent"><Button>Go</button></a>
 <script>
   formButton = document.getElementById("query");
   formInput = document.getElementById("query-input");
   formButton.addEventListener('click', function(e) {
     e.preventDefault();
     if (formInput.value){
-      window.location.href = '/timestamp/' + formInput.value;
+      window.location.href = '/image-search/q/' + formInput.value;
     }
   }, false);
 </script>
